glFusion ChangeLog

v1.1.9
------
- Implemented the Portable PHP password hashing framework (Mark)
- Enhanced the advanced search screen (Mark)
- Calendar: If auto tag is not given event id, return original conten (Mark)
- Forum: Fixed issue where deleting a post did not update last post
  info for the topic properly (Mark)
- Reworked username standards " < > $ % & * are not allowed in username (Mark)
- FileMgmt: Do not allow users access to the upload form if they do not
  have permission to upload to any categories. (Mark)
- Polls: Fixed coding error where permissions were not properly checked (Mark)
- What's New block now uses <ul> class list-new-articles for stories (Mark)
- Modified LDAP class so filter variable is now a configuration option (Mark)
- Media Gallery: Enable full screen playback with FlowPlayer by default (Mark)
- Modified My Account block to use blockheader-list templates. Removed
  the hard coded <ul> / </ul> in code.  (Mark)
- Added new block option: login_block, admin can now specify custom block
  template for login block (see theme's functions.php) (Mark)
- Calendar: Add configuration option to select which blocks display (Mark)
- FileMgmt: Add configuration option to select which blocks display (Mark)
- Links: Add configuration option to select which blocks display (Mark)
- Polls: Add configuration option to select which blocks display (Mark)
- New BBCode editor API (Mark)
- New Environment Check option in Command & Control Screen. Removed PHP info
  link from MG admin screen (Mark)
- New Admin Global User Preference Editor - allows admin to change some
  preferences for all users (Mark)
- Admin user editor now supports editing all user attributes (Mark)
- Feature to allow groups be applied for all new users (Mark)
- Media Gallery: Updated Polish translations (Mark)
- Forum: Implemented user option to enable / disable WYSIWYG editor (Mark)
- Yet another fix to the ATOM webservices publishing code (Mark)