@@ -2,8 +2,8 @@
     <id>sitetailor</id>
     <name>Site Tailor</name>
     <description>Menu and logo management.</description>
-    <version>2.0.3</version>
-    <glfusionversion>1.1.8</glfusionversion>
+    <version>2.0.4</version>
+    <glfusionversion>1.1.9</glfusionversion>
     <phpversion>4.3.0</phpversion>
     <url>http://www.glfusion.org</url>
     <maintainer>Mark R. Evans</maintainer>
