@@ -49,7 +49,7 @@ $_ST_CONF = array();
 
 $_ST_CONF['pi_name']            = 'sitetailor';
 $_ST_CONF['pi_display_name']    = 'Site Tailor';
-$_ST_CONF['pi_version']         = '2.0.3';
-$_ST_CONF['gl_version']         = '1.1.8';
+$_ST_CONF['pi_version']         = '2.0.4';
+$_ST_CONF['gl_version']         = '1.1.9';
 $_ST_CONF['pi_url']             = 'http://www.glfusion.org/';
 ?>
