@@ -23,6 +23,7 @@ window.addEvent('load',function() {
     $('staticpage').style.display='none';
     $('glfunctions').style.display='none';
     $('phpdiv').style.display='none';
+    $('topic').style.display='none';
 
     var myValidator = new fValidator("newitem");
 
@@ -39,6 +40,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunctions').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '2' : // gl actioin
             $('urldiv').style.display='none';
@@ -48,6 +50,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunctions').style.display='';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '3' : // gl menus
             $('urldiv').style.display='none';
@@ -57,6 +60,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunctions').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '4' : // plugins
             $('urldiv').style.display='none';
@@ -66,6 +70,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunctions').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '5' :  // static pages
             $('urldiv').style.display='none';
@@ -75,6 +80,7 @@ function toggleFields() {
             $('staticpage').style.display='';
             $('glfunctions').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '6' : // url
             $('urldiv').style.display='';
@@ -84,6 +90,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunctions').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '7' :  // php function
             $('urldiv').style.display='none';
@@ -93,6 +100,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunctions').style.display='none';
             $('phpdiv').style.display='';
+            $('topic').style.display='none';
             break;
         case '8' :
             $('urldiv').style.display='none';
@@ -102,6 +110,17 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunctions').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
+            break;
+        case '9' : // topic
+            $('urldiv').style.display='none';
+            $('targetdiv').style.display='none';
+            $('glcorediv').style.display='none';
+            $('plugin').style.display='none';
+            $('staticpage').style.display='none';
+            $('glfunctions').style.display='none';
+            $('phpdiv').style.display='none';
+            $('topic').style.display='';
             break;
     }
 }
@@ -157,6 +176,12 @@ function toggleFields() {
         {!if sp_select}
           <label for="spname">{$LANG_ST01[static_pages]}:</label>
           {sp_select}
+        {!endif}
+      </div>
+      <div id="topic" class="optional">
+        {!if topic_select}
+          <label for="topicname">{$LANG_ST01[topic]}:</label>
+          {topic_select}
         {!endif}
       </div>
       <div id="glfunctions" class="optional">
