@@ -31,6 +31,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunc').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '2' : // gl actioin
             $('urldiv').style.display='none';
@@ -40,6 +41,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunc').style.display='';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '3' : // gl menus
             $('urldiv').style.display='none';
@@ -49,6 +51,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunc').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '4' : // plugins
             $('urldiv').style.display='none';
@@ -58,6 +61,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunc').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '5' :  // static pages
             $('urldiv').style.display='none';
@@ -67,6 +71,7 @@ function toggleFields() {
             $('staticpage').style.display='';
             $('glfunc').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '6' : // url
             $('urldiv').style.display='';
@@ -76,6 +81,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunc').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
             break;
         case '7' :  // php function
             $('urldiv').style.display='none';
@@ -85,6 +91,7 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunc').style.display='none';
             $('phpdiv').style.display='';
+            $('topic').style.display='none';
             break;
         case '8' :
             $('urldiv').style.display='none';
@@ -94,6 +101,17 @@ function toggleFields() {
             $('staticpage').style.display='none';
             $('glfunc').style.display='none';
             $('phpdiv').style.display='none';
+            $('topic').style.display='none';
+            break;
+        case '9' :
+            $('urldiv').style.display='none';
+            $('targetdiv').style.display='none';
+            $('glcorediv').style.display='none';
+            $('plugin').style.display='none';
+            $('staticpage').style.display='none';
+            $('glfunc').style.display='none';
+            $('phpdiv').style.display='none';
+            $('topic').style.display='';
             break;
 
     }
@@ -151,6 +169,11 @@ function toggleFields() {
       <div id="staticpage" class="optional required">
         <label for="spname">{$LANG_ST01[static_pages]}:</label>
         {sp_select}
+      </div>
+
+      <div id="topic" class="optional required">
+        <label for="topicname">{$LANG_ST01['topic']}:</label>
+        {topic_select}
       </div>
 
       <div id="glfunc" class="optional required">
